# new_widget

./: README.md  pyproject.toml
src/: main.py  opration.py  utils.py
tests/: test_get_user_operation.py  test_utils.py
