[tool.poetry]
name = "new_widget_3"
version = "0.1.0"
description = ""
authors = ["viktor_klimanov <viktor.klimanov.2017@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
